install_subdir('Yaru-macOS',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

install_subdir('Yaru-macOS-dark',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

install_subdir('Yaru-macOS-light',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

